# ansible_crowsnet

./: .gitignore  CLAUDE.md  Dockerfile  README.md  build-ansible.sh  crowsnet.py  entrypoint.sh  main.py  physical.yml  pyproject.toml  run-ansible.sh  test.yml  virtual.yml
.github/workflows/: ansible-lint.yml
ansible/: CLAUDE.md  physical.yml  site.yml  update.yml  virtual.yml
ansible/group_vars/: all
ansible/molecule/default/: molecule.yml
ansible/roles/: requirements.yml
ansible/roles/microk8s/: README.md
ansible/roles/pbs/: README.md
ansible/roles/physical/: README.md
ansible/roles/proxmox/: README.md
ansible/roles/testing/: README.md
configs/: hello-world.yml  hosts  physical.yml  playbook.yml  set-roles.yml  site.yml  test-role.yml  test.yml  update.yml  virtual.yml
configs/group_vars/: all
docker/: Dockerfile  run-ansible.sh
docker/terraform/: Dockerfile
group_vars/: all
inactive_roles/foundry/tasks/: foundry_services.yml
inactive_roles/pihole/handlers/: main.yml
inactive_roles/pihole/tasks/: main.yml  pihole_services.yml
inactive_roles/postgres/handlers/: main.yml
inactive_roles/postgres/tasks/: main.yml
roles/common/files/: id_ed25519_chasty2.pub
roles/common/tasks/: firewalld.yml  main.yml  packages.yml  services.yml  system.yml  users.yml
roles/common/templates/: sudoer_file.j2
roles/common/vars/: main.yml
roles/desktop/handlers/: main.yml
roles/pihole/: README.md
roles/pihole/vars/: main.yml
roles/postgres/: README.md
ssh-keys/: ansible_ed25519  ansible_ed25519.pub
utilities/: container.py  terraform.py
(+189 files in other folders)
